# paloalto-config-audit

./: .gitignore  AUDIT-CHECKS.md  CLAUDE.md  COMPARISON.md  LICENSE  README.md  SECURITY.md  THREAT-MODEL.md  VALIDATION.md  pyproject.toml  secrets.env.example
.github/workflows/: tests.yml
config/: config.example.yaml
scripts/: pre-commit
src/panos_audit/: audit.py  cli.py  collector.py  drift.py  gitstore.py  inventory.py  normalize.py  promote.py  report.py  sanitize_check.py  set_baseline.py
tests/: test_audit.py  test_cli.py  test_collector.py  test_drift.py  test_gitstore.py  test_inventory.py  test_normalize.py  test_promote.py  test_report.py  test_sanitize_check.py  test_set_baseline.py  test_smoke.py
tests/fixtures/: fw1_baseline.xml  fw1_current_clean.xml  fw1_current_drift.xml
