[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "panos-audit"
version = "0.1.0"
description = "Pull, version-control, and drift-check PAN-OS/Panorama configs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[project.scripts]
panos-audit = "panos_audit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
